<resources>
    <string name="app_name">onRoad</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_again">Confirm Password</string>
    <string name="prompt_msg">Type a message</string>
    <string name="action_settings">Settings</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_send">Send</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Password too short or does not match</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sample_message">Hello!</string>
    <string name="as_driver">Use as driver</string>
    <string name="as_rider">Use as rider</string>
    <string name="prompt_contact_number">Contact Number</string>
    <string name="prompt_destination">Destination...</string>
    <string name="loginText">Welcome to onRoad!</string>
    <string name="please_login_to_continue">Please Login to continue</string>
    <string name="please_register_with_us_to_continue">Please Register with us to continue</string>

    <string name="prompt_starting_place">Starting Place</string>
    <string name="prompt_no_of_seats">No. Of Seats</string>
    <string name="prompt_starting_time">Starting Time</string>
    <string name="prompt_phone"></string>


    <string name="home">Home</string>
    <string name="prolile">Prolile</string>
    <string name="about_us">About Us</string>
    <string name="rides">Search Rides</string>
    <string name="ride_requests">Add Ride</string>
    <string name="logout">LogOut</string>

</resources>
