<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/common_google_signin_btn_text_light">

        <AutoCompleteTextView
            android:id="@+id/startingPlace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_starting_place"
            android:imeOptions="actionNext"
            android:inputType="textNoSuggestions"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textColorHint="@color/white"
            android:textIsSelectable="false"
            android:textSize="18sp"
            android:textStyle="bold" />

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/common_google_signin_btn_text_light">

        <AutoCompleteTextView
            android:id="@+id/destination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_destination"
            android:imeOptions="actionNext"
            android:inputType="textNoSuggestions"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textColorHint="@color/white"
            android:textIsSelectable="false"
            android:textSize="18sp"
            android:textStyle="bold" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/common_google_signin_btn_text_light">

        <AutoCompleteTextView
            android:id="@+id/startingTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_starting_time"
            android:imeOptions="actionNext"
            android:inputType="textNoSuggestions"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textColorHint="@color/white"
            android:textIsSelectable="false"
            android:textSize="18sp"
            android:textStyle="bold" />

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/common_google_signin_btn_text_light">

        <AutoCompleteTextView
            android:id="@+id/noOfSeats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_no_of_seats"
            android:imeOptions="actionNext"
            android:inputType="textNoSuggestions"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textColorHint="@color/white"
            android:textIsSelectable="false"
            android:textSize="18sp"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/common_google_signin_btn_text_light">

            <AutoCompleteTextView
                android:id="@+id/contactNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_contact_number"
                android:imeOptions="actionNext"
                android:inputType="textNoSuggestions"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textColorHint="@color/white"
                android:textIsSelectable="false"
                android:textSize="18sp"
                android:textStyle="bold" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/buttonCreateHike"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Create Hike!"
            android:onClick="createHike"
            />

    </android.support.design.widget.TextInputLayout>



</LinearLayout>
